--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde = ["winit/serde"]
 [dependencies]
 lazy_static = "1.1"
 libc = "0.2"
-winit = "0.18"
+winit = { git = "http://github.com/iceiix/winit", branch = "onthreadcb" }
 
 [build-dependencies]
 gl_generator = "0.10"
