--- a/glutin/Cargo.toml
+++ b/glutin/Cargo.toml
@@ -20,7 +20,8 @@ serde = ["winit/serde"]
 [dependencies]
 lazy_static = "1.3"
 #winit = "^0.19.1"
-winit = { git = "https://github.com/iceiix/winit", branch = "wasm_stub" }
+#winit = { git = "https://github.com/iceiix/winit", branch = "wasm_stub" }
+winit = { git = "https://github.com/iceiix/winit", rev = "0e0ebeb34656dda53e0961638521b18a24254b78" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_glue = "0.2"
